RAIN-3515 : Inbox mobile alignment issue fixed (#110)

--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-inbox-dev/src/components/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-inbox-dev/src/components/index.scss
@@ -150,8 +150,11 @@
     display: flex;
     height: 35px;
 }
+.jk-inbox-search-holder{
+  width: 20%;
+}
 #inbox-search{
-  width: 15%;
+  width: 100%;
     display: flex;
     height: 35px;
 }
@@ -250,11 +253,17 @@ select{
   display: flex;
   align-items: center;
 }
+.jk-inbox-first-element{
+  display: flex;
+  justify-content: space-between;
+}
 
 @media only screen and (max-width: 768px) {
-  #inbox-search{
-    width: 100%;
+  .jk-inbox-first-element{
+    flex-direction: column;
   }
+  .jk-inbox-search-holder {
+    width: 100%; }
   .inbox-filter-wrapper{
     flex-direction: column;
   }
